added a class for storing events. moved some functionality from the main program to the classes. refactoring.

--- a/MailCalendar/MailCalendar/MailCalendar.csproj
+++ b/MailCalendar/MailCalendar/MailCalendar.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="classes\Event.cs" />
+    <Compile Include="classes\EventTable.cs" />
     <Compile Include="classes\Person.cs" />
+    <Compile Include="classes\PrintHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
